# Payup-Rust

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  FEATURE_ENHANCEMENT_STRATEGY.md  IMPROVEMENTS_SUMMARY.md  README.md  README_NEW.md  REFACTORING_SUMMARY.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  overview.md  project_description.md  todo.md
benches/: http_client_benchmark.rs
docs/: stripe_subscription_implementation.md
examples/: multi_platform.rs  payment_intent_example.rs  paypal_webhook_example.rs  square_payments.rs  square_webhook_example.rs  stripe_subscription_example.rs  stripe_webhook_example.rs  test_stripe_payment_methods.rs  unified_payment_processing.rs
hooks/: pre-commit
scripts/: scan-secrets.sh  setup-security.sh
src/: async_sync_macro.rs  builders.rs  circuit_breaker.rs  config.rs  error.rs  http_client.rs  http_utils.rs  lib.rs  payment_provider.rs  provider_factory.rs  rate_limit_config.rs  rate_limiter.rs  safe_utils.rs  stripe.rs  stripe_original.rs
tests/: crypto_integration_tests.rs  http_client_test.rs  integration_test.rs  payment_intent_tests.rs  paypal_integration_tests.rs  paypal_webhook_integration_test.rs  paypal_webhook_simple_test.rs  paypal_webhook_tests.rs  rate_limiter_integration_test.rs  square_integration_tests.rs  square_provider_tests.rs  square_simple_tests.rs  square_tests_fixed.rs  square_webhook_tests.rs  stripe_error_handling_test.rs  stripe_payment_method_integration_tests.rs  stripe_payment_method_tests.rs  stripe_subscription_integration_test.rs  stripe_subscription_unit_test.rs  stripe_unit_tests.rs  (+2 more)
(+47 files in other folders)
